# alx-higher_level_programming

./: pyproject.toml  replit.nix
0x00-python-hello_world/: .3-print_number.py.swp  .5-print_string.py.swp  0-run  10-check_cycle.c  10-check_cycle.c, lists.h  100-write.py  102-magic_calculation.py  2-print.py  3-print_number.py  6-concat.py  cycle
0x01-python-if_else_loops_functions/: 0-positive_or_negative.py
0x0D-SQL_introduction/: .5-full_table.sql.swp  0-list_databases.sql  1-create_database_if_missing.sql  100-move_to_utf8.sql  102-top_city.sql  11-best_score.sql  12-no_cheating.sql  15-groups.sql  16-no_link.sql  2-remove_database.sql  3-list_tables.sql  4-first_table.sql  6-list_values.sql  7-insert_value.sql  9-full_creation.sql  README.md
0x0F-python-object_relational_mapping/: 0-select_states.py  4-cities_by_state.sql  README.md  model_state.py
0x12-javascript-warm_up/: .9-add.js.swp  2-arguments.js  3-value_argument.js  4-concat.js  5-to_integer.js  6-multi_languages_loop.js  7-multi_c.js  8-square.js  9-add.js
