[tool.poetry]
name = "alx-higherlevelprogramming"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "alx_higherlevelprogramming"}]

[tool.poetry.dependencies]
python = "^3.10"
replit = "3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
